<resources>
    <string name="app_name">曼迪美记</string>
    <string name="enter_login">确认登录</string>
    <string name="login">登录</string>
    <string name="logo">美发</string>
    <string name="user_num">员工编号:</string>
    <string name="password">登录密码</string>
    <string name="edit_user_num">请输入员工编号</string>
    <string name="user_num_example">454</string>
    <string name="edit_password">请输入登录密码</string>

    <string name="string_default">--</string>

    <string name="add_order">订单录入</string>
    <string name="add_order_custom_num">会员编号:</string>
    <string name="add_order_addmenu">选择需要的项目</string>
    <string name="free_barber">当前空闲的理发师</string>
    <string name="add_order_top_up">充值</string>
    <string name="add_order_give_items">选择需要的赠送项目</string>
    <string name="add_order_confirm_order">提交订单</string>


    <string name="assistant_query">查询客户</string>


    <string name="order_list">订单列表</string>
    <string name="service_log">服务记录</string>
    <string name="action_more">菜单</string>
    <string name="my_data">个人中心</string>
    <string name="search_date">日期查询</string>
    <string name="staff_management">员工管理</string>
    <string name="book_order">预约订单</string>

    <string name="change_password">修改密码</string>
    <string name="history_order">历史订单</string>
    <string name="current_service">最近服务</string>
    <string name="query">查询</string>
    <string name="history_id_query">输入会员编号查询</string>


    <string name="menu_my_info">我的信息</string>
    <string name="menu_search_customer_info">查询客户历史</string>
    <string name="menu_data_analyze">数据分析</string>
    <string name="menu_change_password">修改密码</string>
    <string name="menu_off_work">下班</string>
    <string name="reservation_order">预约订单</string>
    <string name="add_reservation_order">添加预约订单</string>
    <string name="remark">备注：</string>
    <string name="into_shop">直接进店</string>
    <string name="customer_name">会员姓名</string>
    <string name="et_customer_name">请输入姓名</string>
    <string name="customer_id">编号</string>
    <string name="et_customer_id">请输入编号</string>
    <string name="customer_phone">联系方式</string>
    <string name="et_customer_phone">请输入手机号</string>

    <string name="login_register">快速注册</string>
    <string name="login_phone_number">手机号: </string>
    <string name="verifyCode">验证码: </string>
    <string name="et_verifyCode">请输入验证码</string>
    <string name="get_check_code">获取验证码</string>

    <string name="gender">性别</string>
    <string name="male">男士</string>
    <string name="female">女士</string>
    <string name="care_hair">护理</string>
    <string name="color_hair">染发</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_server_item_details">ServerItemDetailsActivity</string>
    <string name="perm_hair">烫发</string>
    <string name="wash_hair">洗剪吹</string>

    <string name="date">日期</string>
    <string name="choose_date">选择预约日期</string>
    <string name="time">时间</string>
    <string name="choose_time">选择预约时间</string>
    <string name="choose_add">点击添加</string>
    <string name="hairdresser">美发师</string>
    <string name="assistant">助理</string>
    <string name="cost">消费</string>
    <string name="enter_add_order">确认添加</string>

    <string name="state">状态</string>
    <string name="id">编号</string>
    <string name="name">姓名</string>
    <string name="career">职位:</string>
    <string name="phone">手机号码:</string>
    <string name="enter">确定</string>
    <string name="commit">提交</string>
    <string name="cancel">取消</string>
    <string name="more_history_order">更多订单</string>
    <string name="dialog_history_order">客户历史记录</string>
    <string name="dialog_hairdresser">当前空闲美发师</string>
    <string name="dialog_hairdresser_time">美发师空闲时间</string>
    <string name="dialog_assistant">当前空闲助理</string>
    <string name="dialog_assistant_time">助理空闲时间</string>
    <string name="dialog_staff_current">暂时没有空闲工作人员</string>
    <string name="dialog_off_work">确认下班吗亲?</string>
    <string name="dialog_order_commit">确保信息无误了吗亲？</string>
    <string name="dialog_off_work_time">18:00</string>
    <string name="dialog_customer_info">会员信息</string>
    <string name="add_order_custom_info">客户信息</string>

    <string name="dialog_confirm_pay">确认支付订单?</string>
    <string name="pay_cost">￥ 金额</string>
    <string name="choose_date_check_order">选择日期查询订单</string>
    <string name="choose_type_check_order">选择类型查询订单</string>

    <string name="choose_order_list_type">订单类型</string>
    <string name="order_num">订单号:</string>
    <string-array name="order_list_type">
        <item>预约中</item>
        <item>服务中</item>
        <item>待支付</item>
        <item>待评价</item>
        <item>已完成</item>
        <item>已取消</item>
    </string-array>

    <string name="order_list_type_book">预约中</string>
    <string name="order_list_type_serving">服务中</string>
    <string name="order_list_type_endser">待支付</string>
    <string name="order_list_type_payed">待评价</string>
    <string name="order_list_type_finished">已完成</string>
    <string name="order_list_type_cancel">已取消</string>

    <!-- TODO: IconFonts At Here -->
    <string name="icf_search">&#xe600;</string>
    <string name="icf_order">&#xe601;</string>
    <string name="icf_log">&#xe602;</string>
    <string name="icf_edit">&#xe603;</string>
    <string name="icf_cut">&#xe604;</string>
    <string name="icf_delete">&#xe605;</string>
    <string name="icf_data">&#xe606;</string>
    <string name="icf_next">&#xe607;</string>
    <string name="icf_refresh">&#xe608;</string>
    <string name="icf_minus">&#xe609;</string>
    <string name="icf_plus">&#xe60a;</string>
    <string name="icf_calendar">&#xe60b;</string>

    
</resources>
