<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wiipu.beautysalon_new_v2.ui.BarberActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/navigation_high"
        android:background="@color/white">
        <com.example.kenjc.mytitlebar.MyTitleBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mytitlebar_barber"
            android:background="@color/white"
            custom:leftBackground="@mipmap/ic_search_big"
            custom:rightBackground="@mipmap/ic_add_order"
            custom:titleText="@string/app_name"
            custom:titleText_Color="@color/purple"
            custom:titleText_Size="@dimen/navigation_textsize"/>
    </LinearLayout>

    <!--分界线-->
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/divide_line"
        android:background="@color/divide_line" >
    </View>

    <LinearLayout
        android:id="@+id/fg_barber_switcher"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical" >
        <fragment
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="677"
            android:id="@+id/barber_fragmentPager"
            tools:layout="@layout/fragment_book_order"
            android:name="com.wiipu.beautysalon_new_v2.Fragment.BookOrderFragment"/>

    </LinearLayout>

    <!--分界线-->
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/divide_line"
        android:background="@color/divide_line" >
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_high"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="bottom" >


        <!--预约订单fragment的Button-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/btn_barber_book_order"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/icf_order"
                android:id="@+id/tv_bar_book_order"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/tv_bar_book_order_down"
                android:text="@string/book_order"/>
        </LinearLayout>

        <!--服务记录的fragment的Button-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/btn_barber_service_log"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/icf_log"
                android:id="@+id/tv_bar_log"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_bar_log_down"
                android:layout_gravity="center_horizontal"
                android:text="@string/service_log"/>
        </LinearLayout>

        <!--个人数据的fragment的Button-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/btn_barber_data"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/icf_data"
                android:id="@+id/tv_bar_data"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_bar_data_down"
                android:layout_gravity="center_horizontal"
                android:text="@string/my_data"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>