<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.wiipu.beautysalon_new_v2.ui.AddOrderActivity">

    <!--自定义标题栏-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/navigation_high"
        android:background="@color/white">
        <com.example.kenjc.mytitlebar.MyTitleBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mytitlebar_add_order"
            android:background="@color/white"
            custom:leftBackground="@mipmap/scissors_icon"
            custom:rightBackground="@mipmap/ic_close"
            custom:titleText="@string/add_order"
            custom:titleText_Color="@color/purple"
            custom:titleText_Size="@dimen/navigation_textsize"/>
    </LinearLayout>
    <!--滚动视图-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:orientation="vertical">

            <!--订单号-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:paddingLeft="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="20dp"
                    android:text="@string/order_num"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_order_id_add_order"
                    android:text="2016032216270031"
                    android:layout_weight="5" />
            </LinearLayout>

            <!--客户信息-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:text="@string/add_order_custom_info"/>

            <!--会员编号-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:paddingLeft="20dp"
                    android:layout_height="wrap_content"
                    android:textSize="13dp"
                    android:text="@string/add_order_custom_num"/>
                <EditText
                    android:layout_width="220dp"
                    android:paddingLeft="10dp"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"/>
            </LinearLayout>

            <!--手机号-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:paddingLeft="20dp"
                    android:layout_height="wrap_content"
                    android:textSize="13dp"
                    android:text="@string/phone"/>
                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="220dp"
                    android:paddingLeft="10dp"
                    android:textStyle="normal" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@mipmap/ic_search"
                    android:paddingLeft="10dp"
                    android:layout_gravity="bottom" />
            </LinearLayout>

            <!--新的方法-->
            <!--空闲理发师选择-->
            <RelativeLayout
                android:id="@+id/rl_free_barber_add_order"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:layout_centerInParent="true"
                    android:text="@string/free_barber"
                    android:textColor="@color/purple"
                    android:textSize="15sp" />

                <!--<ImageButton-->
                    <!--android:id="@+id/btn_free_barber_add_order"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:layout_marginRight="10dp"-->
                    <!--android:background="@mipmap/personal_arrow_right" />-->
            </RelativeLayout>

            <!--项目选择-->
            <RelativeLayout
                android:id="@+id/rl_all_items"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:layout_centerInParent="true"
                    android:textColor="@color/purple"
                    android:text="@string/add_order_addmenu"
                    android:textSize="15sp" />

                <!--<ImageButton-->
                    <!--android:id="@+id/order_menu_more"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:layout_marginRight="10dp"-->
                    <!--android:background="@mipmap/personal_arrow_right" />-->
            </RelativeLayout>

            <!--充值选择-->
            <com.wiipu.groupviewlayout.view.GroupViewLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/group_top_up"
                custom:GroupViewTitleTextColor="@color/colorAccent"
                custom:GroupViewTitleTextSize="5sp"
                custom:GroupViewTitleText="@string/add_order_top_up">
            </com.wiipu.groupviewlayout.view.GroupViewLayout>

            <!--充值页面，由上方控件控制是否显示-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rl_top_up_page">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <include
                        layout="@layout/view_top_up"/>
                </LinearLayout>
            </RelativeLayout>
            <!--赠送免费项目选择-->
            <RelativeLayout
                android:id="@+id/rl_add_order_free"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/purple"
                    android:layout_centerInParent="true"
                    android:text="@string/add_order_give_items"
                    android:textSize="15sp" />

                <!--<ImageButton-->
                    <!--android:id="@+id/add_order_free_more"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:layout_marginRight="10dp"-->
                    <!--android:background="@mipmap/personal_arrow_right" />-->
            </RelativeLayout>

            <!--提交订单按钮-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="25dp">
                <Button
                    android:id="@+id/btn_commit"
                    android:layout_height="50dp"
                    android:layout_width="match_parent"
                    android:text="@string/add_order_confirm_order"
                    android:background="@drawable/btn_exit"
                    android:layout_alignParentBottom="true"
                    android:textColor="@android:color/white"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
